<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/pass_current"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/edittext_style1"
        android:ems="10"
        android:hint="@string/current_password"
        android:inputType="textPassword"
        android:textSize="6pt" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/pass_retype"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/pass_current"
        android:layout_below="@+id/chbx_showpass"
        android:background="@drawable/edittext_style1"
        android:ems="10"
        android:hint="@string/repeat_password"
        android:inputType="textPassword"
        android:textSize="6pt" />

    <EditText
        android:id="@+id/pass_newpass"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/pass_current"
        android:layout_below="@+id/txt_forgetpass"
        android:background="@drawable/edittext_style1"
        android:ems="10"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:textSize="6pt" />

    <TextView
        android:id="@+id/txt_forgetpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/pass_current"
        android:layout_below="@+id/pass_current"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/forgot_password"
        android:textSize="6pt" />

    <CheckBox
        android:id="@+id/chbx_showpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/pass_current"
        android:layout_below="@+id/pass_newpass"
        android:text="@string/show_password"
        android:textSize="6pt" />

</RelativeLayout>