<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:orientation="horizontal"
    android:paddingBottom="1dp"
    android:paddingTop="1dp" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="#E6E6E6" >

        <ImageView
            android:id="@+id/imgProfile"
            android:layout_width="@dimen/status_image_size"
            android:layout_height="@dimen/status_image_size"
            android:contentDescription="@string/item_imgprofile_description"
            android:src="@drawable/ic_no_imgprofile" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginRight="5dp"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/txtName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/name_demo"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/txtProvince"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_weight="0.8"
                android:text="@string/name_demo"
                android:textColor="@color/phone_number_info"
                android:textSize="6pt" />
        </LinearLayout>

        <Button
            android:id="@+id/btnInvite"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginRight="5dp"
            android:layout_weight="0.8"
            android:background="@drawable/button_friendrequests_blue"
            android:text="@string/invite"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>